// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<CartCount/> matches the snapshot 1`] = `
<CartCount__AnimationStyles>
  <TransitionGroup
    childFactory={[Function]}
    component="div"
  >
    <CSSTransition
      className="count"
      classNames="count"
      key="6"
      timeout={
        Object {
          "enter": 600,
          "exit": 500,
        }
      }
      unmountOnExit={true}
    >
      <CartCount__Dot>
        6
      </CartCount__Dot>
    </CSSTransition>
  </TransitionGroup>
</CartCount__AnimationStyles>
`;

exports[`<CartCount/> updates via props 1`] = `
<CartCount__AnimationStyles>
  <TransitionGroup
    childFactory={[Function]}
    component="div"
  >
    <CSSTransition
      className="count"
      classNames="count"
      key="17"
      timeout={
        Object {
          "enter": 600,
          "exit": 500,
        }
      }
      unmountOnExit={true}
    >
      <CartCount__Dot>
        17
      </CartCount__Dot>
    </CSSTransition>
  </TransitionGroup>
</CartCount__AnimationStyles>
`;

exports[`<CartCount/> updates via props 2`] = `
<CartCount__AnimationStyles>
  <TransitionGroup
    childFactory={[Function]}
    component="div"
  >
    <CSSTransition
      className="count"
      classNames="count"
      key="27"
      timeout={
        Object {
          "enter": 600,
          "exit": 500,
        }
      }
      unmountOnExit={true}
    >
      <CartCount__Dot>
        27
      </CartCount__Dot>
    </CSSTransition>
  </TransitionGroup>
</CartCount__AnimationStyles>
`;
